[package]
name = "savage"
version = "0.1.0"
authors = ["Philipp Emanuel Weidmann <pew@worldwidemann.com>"]
description = "A primitive computer algebra system (REPL)"
repository = "https://github.com/p-e-w/savage"
readme = "README.md"
license = "AGPL-3.0-or-later"
edition = "2021"

[dependencies]
rustyline = "9.0.0"
savage_core = { path = "../savage_core", version = "0.1.0" }
