[package]
name = "savage"
version = "0.2.0"
authors = ["Philipp Emanuel Weidmann <pew@worldwidemann.com>"]
description = "A primitive computer algebra system (REPL)"
repository = "https://github.com/p-e-w/savage"
readme = "README.md"
license = "AGPL-3.0-or-later"
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
directories = "4.0.1"
crossterm = "0.25.0"
ansi_term = "0.12.1"
rustyline = "10.1.0"
rustyline-derive = "0.7.0"
termimad = "0.20.2"
regex = "1.6.0"
chumsky = "0.8.0"
ariadne = "0.1.5"
savage_core = { path = "../savage_core", version = "0.2.0" }
