[package]
name = "savage_macros"
version = "0.1.0"
authors = ["Philipp Emanuel Weidmann <pew@worldwidemann.com>"]
description = "A primitive computer algebra system (macro helper crate, NOT INTENDED FOR USE BY THIRD-PARTY CRATES)"
repository = "https://github.com/p-e-w/savage"
readme = "README.md"
license = "AGPL-3.0-or-later"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = "1.0.85"
quote = "1.0.14"
darling = "0.13.1"
